fix: Corrige leitura QRcode e regras de pontuação
